feat: actionボタンのサイズ修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -486,6 +486,16 @@ footer {
   .search input[type="submit"] {
     font-size: 0.9rem;
   }
+
+
+  .top-newuser-action {
+    margin: 12% 4%;
+  }
+  
+  .top-newuser-action p a {
+    padding: 8% 0;
+  }
+  
 }
 
 
