--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -495,6 +495,30 @@ footer {
   .top-newuser-action p a {
     padding: 8% 0;
   }
+
+
+  .top-ranking-title {
+    margin-top: 29%;
+    margin-bottom: 4%;
+  }
+  
+  .top-ranking-title h2 {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  .top-ranking {
+    margin-left: 7%;
+  }
+  
+  
+  .ranking-content {
+    margin: 0 5%;
+  }
+
+  .ranking-content:last-child {
+    padding-right: 16%;
+  }
   
 }
 
