faet: 「新着作品」のレスポンシブ対応

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -519,6 +519,30 @@ footer {
   .ranking-content:last-child {
     padding-right: 16%;
   }
+
+
+  .top-new-arrival-title {
+    margin-top: 44%;
+    margin-bottom: 4%;
+  }
+  
+  .top-new-arrival-title h2 {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+
+  .top-new-arrival {
+    margin-left: 7%;
+  }
+  
+  
+  .new-arrival-content {
+    margin: 0 5%;
+  }
+
+  .new-arrival-content:last-child {
+    padding-right: 16%;
+  }
   
 }
 
