feat: パスの修正

--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -43,4 +43,4 @@ section.lp-action
   .lp-action-title
     h3 さあ、今すぐはじめよう！
   .lp-action-button
-    = link_to '新規登録', new_registration_path(resource_name)
+    = link_to '新規登録', '/users/sign_up'
