--- a/app/views/static/lp.html.slim
+++ b/app/views/static/lp.html.slim
@@ -9,10 +9,10 @@ section.lp-welcome
   .lp-welcome-title
     h3 RELIERへようこそ
   .lp-welcome-content
-    p RELIER（リライア）にお越しいただきありがとうございます。
-    p このサイトでは「1行小説リレー」というものを遅べます。
-    br
-    p このページでは、そんな1行小説リレーの魅力を皆さんにお伝えします。
+    p RELIER（リライア）にお越しいただきありがとうございます。<br>
+      このサイトでは「1行小説リレー」というものを遅べます。<br>
+      <br>
+      このページでは、そんな1行小説リレーの魅力を皆さんにお伝えします。
 
 section.lp-movie
   .lp-movie-title
@@ -24,7 +24,29 @@ section.lp-main
   .lp-main-title
     h3 遊び方の紹介
   .lp-main-contents
-    // ここを動的なコンテンツにする
+    .lp-main-content
+      .main-content-img
+        img src="#"
+      .main-content-p
+        h4 小説を読む
+        p RELIERでは、アカウントを持っている全てのユーザーが「読者」です。<br>
+          あなたが気になったタイトルの小説を開いて読んでみましょう。
+    .lp-main-content
+      .main-content-img
+        img src="#"
+      .main-content-p
+        h4 Likeを押す
+        p RELIERでは、アカウントを持っている全てのユーザーが「レビュワー」です。<br>
+          あなたが気に入ったタイトルをLikeで推しましょう。
+    .lp-main-content
+      .main-content-img
+        img src="#"
+      .main-content-p
+        h4 シナリオを作る
+        p RELIERでは、アカウントを持っている全てのユーザーが「著者」です。<br>
+          あなたが気になったタイトルの小説を開いてみましょう。<br>
+          そして、その先のシナリオを進めるのは、あなた。<br>
+          あなたが望んだシナリオを1行だけ追加しましょう。
 
 section.lp-dev
   .lp-dev-title
