feat: パスを実装（posts#indexのボタン箇所）

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -23,7 +23,7 @@ section.bg-top
 section.top-container
   // LP遷移ボタン
   .top-newuser-action
-    p = link_to "はじめてご利用の方へ", "#"
+    p = link_to "はじめてご利用の方へ", lp_path
   // おすすめ作品
   .top-ranking-wrapper
     .top-ranking-title
