--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -21,9 +21,10 @@ section.bg-top
         = f.submit "検索"
 
 section.top-container
-  // LP遷移ボタン
-  .top-newuser-action
-    p = link_to "はじめてご利用の方へ", lp_path
+  - unless user_signed_in?
+    // LP遷移ボタン
+    .top-newuser-action
+      p = link_to "はじめてご利用の方へ", lp_path
   // おすすめ作品
   .top-ranking-wrapper
     .top-ranking-title
