feat: コンテンツエリアのレスポンシブ対応

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1071,4 +1071,45 @@ footer {
     padding: 8px 15px;
     font-size: 0.93rem;
   }
+
+
+  .profile-sub {
+    margin-left: 2%;
+    font-size: 0.8rem;
+  }
+
+  .profile-sub .profile {
+    margin-top: 1.5%;
+  }
+
+  .profile-sub .follow-follower {
+    margin-top: 3%;
+  }
+
+  .user-novels-wrapper {
+    margin-top: 22%;
+  }
+  
+  .user-novels-wrapper img {
+    width: 230px;
+    height: 313px;
+  }
+  
+  .user-novels-requests {
+    margin-top: 4%;
+    margin-bottom: 8%;
+  }
+  
+  .user-novels-requests a {
+    margin-left: 4%;
+  }
+  
+  .user-novels-writing {
+    margin-top: 4%;
+    margin-bottom: 8%;
+  }
+  
+  .user-novels-writing a {
+    margin-left: 4%;
+  }
 }
