--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -788,6 +788,33 @@ a:hover {
   margin-top: 0.6%;
 }
 
+@media screen and (max-width: 480px) {
+  .post-show-top {
+    padding-top: 18%;
+    // padding-bottom: 13%;
+  }
+  
+  .post-main-contents {
+    margin-left: 7%;
+    margin-right: 7%;
+    padding-left: 3%;
+    // padding-right: 1%;
+  }
+  
+  .post-show-title {
+    padding-top: 4%;
+    font-size: 1.5rem;
+  }
+
+  .post-show-image img {
+    width: 284px;
+    height: 388px;
+  }
+}
+
+
+
+
 
 
 
