feat: post#showのレスポンシブ、flexboxを解除したら思いの外いい感じに、、

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -791,6 +791,7 @@ a:hover {
 @media screen and (max-width: 480px) {
   .post-show-top {
     padding-top: 18%;
+    display: block;
     // padding-bottom: 13%;
   }
   
