feat: 「サインイン」の文字を分かりやすくした、、、

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -718,6 +718,11 @@ a:hover {
   font-size: .75rem;
 }
 
+.not-signin a {
+  text-decoration: underline;
+  color: #69b3fd;
+}
+
 .post-order {
   margin-top: 5%;
   margin-bottom: 2%;
