feat: buttonと目アイコンの修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -845,6 +845,19 @@ a:hover {
     font-size: 1.02rem;
     line-height: 24px;
   }
+
+  .post-reaction ul {
+    margin-bottom: 9%;
+  }
+  
+  .post-reaction ul li i {
+    margin-right: 8px;
+  }
+  
+  .post-reading-button p a {
+    padding: 21px 32px;
+    font-size: 1.25rem;
+  }
 }
 
 
