--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -853,6 +853,10 @@ a:hover {
   .post-reaction ul li i {
     margin-right: 8px;
   }
+
+  .post-reading-button {
+    margin-bottom: 34%;
+  }
   
   .post-reading-button p a {
     padding: 21px 32px;
