feat: 投稿ログと1行投稿をBlock化

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -862,6 +862,14 @@ a:hover {
     padding: 21px 32px;
     font-size: 1.25rem;
   }
+
+  .post-add-contents {
+    margin-left: 0%;
+    padding-left: 0%;
+    padding-right: 0%;
+    margin-bottom: 20%;
+    display: block;
+  }
 }
 
 
