feat: 投稿ログの位置修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -870,6 +870,21 @@ a:hover {
     margin-bottom: 20%;
     display: block;
   }
+
+  .post-log {
+    border: 3.5px solid #999;
+  }
+  
+  .post-log h3 {
+    font-size: 1.25rem;
+  }
+  
+  .post-log .post-log-contents {
+    margin-top: 10%;
+  }
+  
+  
+
 }
 
 
