--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -867,7 +867,8 @@ a:hover {
     margin-left: 0%;
     padding-left: 0%;
     padding-right: 0%;
-    margin-bottom: 20%;
+    margin-bottom: 12%;
+    padding-bottom: 18%;
     display: block;
   }
 
@@ -902,15 +903,45 @@ a:hover {
     margin-bottom: 9%;
   }
 
-  .post-log .post-log-info p a {
-    color: #888;
-    transition: .3s;
+  .post-add {
+    margin-top: 8%;
+    border: 3.5px solid #888;
   }
-
-  .post-log .post-log-info p a:hover {
-    color: #0a9dd1;
-    transition: .3s;
+  
+  .micropost-form h3 {
+    font-size: 1.25rem;
   }
+  
+  .novel-form {
+    margin-top: 4%;
+  }
+  
+  .novel-form p {
+    margin-bottom: 1%;
+    font-size: 1.02rem;
+  }
+  
+  .novel-form input[type="text"] {
+    width: 242px;
+    height: 25px;
+    font-size: .75rem;
+  }
+  
+  .post-order {
+    margin-top: 5%;
+    margin-bottom: 2%;
+  }
+  
+  .post-order p {
+    font-size: .85rem;
+    margin-top: 2%;
+    color: #333;
+  }
+  
+  .post-order .column {
+    font-size: .9rem;
+  }
+  
 
 }
 
