feat: 著者に求める展開の位置修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -922,27 +922,23 @@ a:hover {
   }
   
   .novel-form input[type="text"] {
-    width: 242px;
-    height: 25px;
-    font-size: .75rem;
+    height: 29px;
+    font-size: .85rem;
   }
   
   .post-order {
-    margin-top: 5%;
-    margin-bottom: 2%;
+    margin-top: 10%;
+    margin-bottom: 9%;
   }
   
   .post-order p {
-    font-size: .85rem;
-    margin-top: 2%;
-    color: #333;
+    font-size: .92rem;
+    margin-top: 3.5%;
   }
   
   .post-order .column {
-    font-size: .9rem;
+    font-size: 1.02rem;
   }
-  
-
 }
 
 
