--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -25,6 +25,26 @@ section.top-container
     // LP遷移ボタン
     .top-newuser-action
       p = link_to "はじめてご利用の方へ", lp_path
+  // Newsエリア
+  .top-article-wrapper
+    .top-article-title
+      h2 News
+      p お知らせ
+    .top-article-contents
+      // eachする
+      ul
+        li = link_to root_path do
+          p 2021/02/09
+          p こんな変更があったよ（タイトルが入る）
+        li = link_to root_path do
+          p 2021/02/09
+          p こんな変更があったよ（タイトルが入る）
+        li = link_to root_path do
+          p 2021/02/09
+          p こんな変更があったよ（タイトルが入る）
+        li = link_to root_path do
+          p 2021/02/09
+          p こんな変更があったよ（タイトルが入る）
   // おすすめ作品
   .top-ranking-wrapper
     .top-ranking-title
