--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -34,17 +34,17 @@ section.top-container
       // eachする
       ul
         li = link_to root_path do
-          p 2021/02/09
-          p こんな変更があったよ（タイトルが入る）
+          p.date 2021/02/09
+          p.title こんな変更があったよ（タイトルが入る）
         li = link_to root_path do
-          p 2021/02/09
-          p こんな変更があったよ（タイトルが入る）
+          p.date 2021/02/09
+          p.title こんな変更があったよ（タイトルが入る）
         li = link_to root_path do
-          p 2021/02/09
-          p こんな変更があったよ（タイトルが入る）
+          p.date 2021/02/09
+          p.title こんな変更があったよ（タイトルが入る）
         li = link_to root_path do
-          p 2021/02/09
-          p こんな変更があったよ（タイトルが入る）
+          p.date 2021/02/09
+          p.title こんな変更があったよ（タイトルが入る）
   // おすすめ作品
   .top-ranking-wrapper
     .top-ranking-title
