fix:こういう粋な計らいが何よりも大切

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -152,7 +152,7 @@ a:hover {
   margin-top: 0.6%;
 }
 
-// POST INDEX(ROOT PATH)
+// HOMW TOP(ROOT PATH)
 .bg-top {
   background-image: url(books.jpg);
   opacity: .9;
