--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -244,6 +244,11 @@ a:hover {
   font-size: 1.25rem;
 }
 
+.top-article-wrapper {
+  margin: 3% 15%;
+  background-color: rgb(244, 244, 244);
+}
+
 .top-ranking-title {
   margin-top: 7%;
   margin-bottom: 1%;
@@ -273,7 +278,7 @@ a:hover {
   width: 250px;
   height: 352px;
   transition: 0.5s;
-  box-shadow: 0 5px 12px 0 rgba(0, 0, 0, .3);
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .3);
 }
 
 .top-post-img img:hover {
