--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -246,7 +246,17 @@ a:hover {
 
 .top-article-wrapper {
   margin: 3% 15%;
-  background-color: rgb(244, 244, 244);
+  display: flex;
+  // background-color: rgb(251, 251, 251);
+}
+
+.top-article-title h2 {
+  font-size: 2.25rem;
+}
+
+.top-article-title p {
+  font-size: 1.125rem;
+  color: #666;
 }
 
 .top-ranking-title {
