feat: ラベルを追加

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -35,15 +35,19 @@ section.top-container
       ul
         li = link_to root_path do
           p.date 2021/02/09
+          p.label アップデート
           p.title こんな変更があったよ（タイトルが入る）
         li = link_to root_path do
           p.date 2021/02/09
+          p.label お知らせ
           p.title こんな変更があったよ（タイトルが入る）
         li = link_to root_path do
           p.date 2021/02/09
+          p.label その他
           p.title こんな変更があったよ（タイトルが入る）
         li = link_to root_path do
           p.date 2021/02/09
+          p.label アップデート
           p.title こんな変更があったよ（タイトルが入る）
   // おすすめ作品
   .top-ranking-wrapper
