feat: タグのサイズとか位置とか色とか

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -35,22 +35,22 @@ section.top-container
       ul
         li = link_to root_path do
           p.date 2021/02/09
-          p.label アップデート
+          p.label.update アップデート
           p.title こんな変更があったよ（タイトルが入る）
         / hr
         li = link_to root_path do
           p.date 2021/02/09
-          p.label お知らせ
+          p.label.notice お知らせ
           p.title こんな変更があったよ（タイトルが入る）
         / hr
         li = link_to root_path do
           p.date 2021/02/09
-          p.label その他
+          p.label.other その他
           p.title こんな変更があったよ（タイトルが入る）
         / hr
         li = link_to root_path do
           p.date 2021/02/09
-          p.label アップデート
+          p.label.update アップデート
           p.title こんな変更があったよ（タイトルが入る）
   // おすすめ作品
   .top-ranking-wrapper
