--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -262,6 +262,8 @@ a:hover {
 .top-article-contents ul {
   margin-top: 3%;
   margin-left: 80px;
+  padding-right: 20%;
+  width: 100%;
 }
 
 .top-article-contents ul li a {
@@ -272,7 +274,7 @@ a:hover {
 }
 
 .top-article-contents ul li a p {
-  margin-left: 22px;
+  // margin-left: 22px;
   font-size: 1.05rem;
 }
 
@@ -280,6 +282,29 @@ a:hover {
   color: #333;
 }
 
+.top-article-contents ul li a .label {
+  font-size: 0.79rem;
+  margin-top: 2px;
+  color: rgb(249, 249, 249);
+}
+
+.top-article-contents ul li a .update {
+  background-color: #A16EFF;
+  border-radius: 7px;
+  padding: 2px 4px;
+}
+
+.top-article-contents ul li a .notice {
+  background-color: #FF773E;
+  border-radius: 7px;
+  padding: 2px 16px;
+}
+
+.top-article-contents ul li a .other {
+  background-color: #5D99FF;
+  border-radius: 7px;
+  padding: 2px 22px;
+}
 
 .top-ranking-title {
   margin-top: 7%;
