--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -34,24 +34,24 @@ section.top-container
       // eachする
       ul
         li = link_to root_path do
-          p.date 2021/02/09
+          p.date 2021/02/22
           p.label.update アップデート
-          p.title こんな変更があったよ（タイトルが入る）
+          p.title 軽度のバグを修正しました
         / hr
         li = link_to root_path do
-          p.date 2021/02/09
+          p.date 2021/02/18
           p.label.notice お知らせ
-          p.title こんな変更があったよ（タイトルが入る）
+          p.title そろそろこういう素晴らしい機能ができるよ良かったね
         / hr
         li = link_to root_path do
-          p.date 2021/02/09
+          p.date 2021/02/16
           p.label.other その他
-          p.title こんな変更があったよ（タイトルが入る）
+          p.title このサイトをやってるお前らときたらwww
         / hr
         li = link_to root_path do
           p.date 2021/02/09
           p.label.update アップデート
-          p.title こんな変更があったよ（タイトルが入る）
+          p.title 大幅なアップデートを行いました
   // おすすめ作品
   .top-ranking-wrapper
     .top-ranking-title
