--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -39,9 +39,9 @@ section.top-container
           p.title 軽度のバグを修正しました
         / hr
         li = link_to root_path do
-          p.date 2021/02/18
+          p.date = @sample_article.created_at.strftime("%Y/%m/%d")
           p class="label #{@sample_article.news_type}" = t(@sample_article.news_type)
-          p.title そろそろこういう素晴らしい機能ができるよ良かったね
+          p.title = @sample_article.title
         / hr
         li = link_to root_path do
           p.date 2021/02/16
