--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -416,6 +416,42 @@ a:hover {
     padding: 8% 0;
   }
 
+  .top-article-wrapper {
+    margin: 12% 8%;
+    display: block;
+  }
+
+  .top-article-title {
+    text-align: center;
+  }
+  
+  .top-article-title h2 {
+    font-size: 1.9rem;
+  }
+  
+  .top-article-title p {
+    font-size: 1rem;
+  }
+  
+  .top-article-contents ul {
+    margin-top: 3%;
+    margin-left: 80px;
+    padding-right: 20%;
+    width: 100%;
+  }
+  
+  .top-article-contents ul li a {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin-top: 2.5%;
+  }
+  
+  .top-article-contents ul li a p {
+    margin-left: 22px;
+    font-size: 1.05rem;
+  }
+
   .top-ranking-title {
     margin-top: 29%;
     margin-bottom: 4%;
