fix: TODOを付け足し、忘れぬうちに、、

--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -31,7 +31,7 @@ section.top-container
       h2 News
       p お知らせ
     .top-article-contents
-      // eachする
+      // TODO: 最新の4件を取得する
       ul
         li = link_to root_path do
           p.date 2021/02/22
