--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -8,5 +8,9 @@
       = f.label :content
       br
       = f.text_area :content, class: 'form-control'
+    .field 
+      = f.label :news_type
+      br
+      = f.select :news_type, class: 'form-control'
     .submit
       = f.submit '作成', class: 'btn btn-primary'
