--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -11,6 +11,6 @@
     .field 
       = f.label :news_type
       br
-      = f.select :news_type, class: 'form-control'
+      = f.select :news_type, Article.news_types, { include_blank: '選択しなさいよね'}, class: 'form-control'
     .submit
       = f.submit '作成', class: 'btn btn-primary'
