--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -1,5 +1,5 @@
 = form_with(model: @article, local: true) do |f|
-  .post-fields
+  .article-fields
     .field
       = f.label :title
       br
@@ -14,3 +14,5 @@
       = f.select :news_type, Article.news_types, { include_blank: '選択しなさいよね'}, class: 'form-control'
     .submit
       = f.submit '作成', class: 'btn btn-primary'
+
+css:
