feat: 細かい変更

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,6 +1,6 @@
 = form_with(model: @post, local: true) do |f|
   
-  .post-fields
+  .fields.post-fields
     .field 
       = f.label :image
       br
