--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -1,5 +1,5 @@
 = form_with(model: @article, local: true) do |f|
-  .article-fields
+  .fields.article-fields
     .field
       = f.label :title
       br
