--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -3,15 +3,15 @@
     h2 サインアップ
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = render "devise/shared/error_messages", resource: resource
-    .field
+    .field.devise-field
       = f.label :name
       br
       = f.text_field :name, autofocus: true, autocomplete: "name"
-    .field
+    .field.devise-field
       = f.label :email
       br
       = f.email_field :email, autofocus: true, autocomplete: "email"
-    .field
+    .field.devise-field
       = f.label :password
       - if @minimum_password_length
         em
@@ -20,7 +20,7 @@
           | 文字以上)
       br
       = f.password_field :password, autocomplete: "new-password"
-    .field
+    .field.devise-field
       = f.label :password_confirmation
       br
       = f.password_field :password_confirmation, autocomplete: "new-password"
