feat: 共通じゃない部分のCSS

--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -4,3 +4,13 @@
   h2 News作成ページ
 
   = render 'form'
+
+css:
+  .article-field-wrapper {
+    text-align: center;
+  }
+
+  .article-field-wrapper h2 {
+    font-size: 1.35rem;
+    color: #444;
+  }
