--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -16,3 +16,8 @@
       = f.submit '作成', class: 'btn btn-primary'
 
 css:
+  .article-field label {
+    font-size: 1.25rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #000066;
+  }
