--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -21,3 +21,9 @@ css:
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #000066;
   }
+
+  .article-field select {
+    width: 20%;
+    height: 30px;
+    font-size: 1.01rem;
+  }
