--- a/app/views/home/top.html.slim
+++ b/app/views/home/top.html.slim
@@ -31,27 +31,12 @@ section.top-container
       h2 News
       p お知らせ
     .top-article-contents
-      // TODO: 最新の4件を取得する
       ul
-        li = link_to root_path do
-          p.date 2021/02/22
-          p class="label update" アップデート
-          p.title 軽度のバグを修正しました
-        / hr
-        / li = link_to root_path do
-        /   p.date = @sample_article.created_at.strftime("%Y/%m/%d")
-        /   p class="label #{@sample_article.news_type}" = t(@sample_article.news_type)
-        /   p.title = @sample_article.title
-        / hr
-        li = link_to root_path do
-          p.date 2021/02/16
-          p class="label other" その他
-          p.title このサイトをやってるお前らときたらwww
-        / hr
-        li = link_to root_path do
-          p.date 2021/02/09
-          p class="label update" アップデート
-          p.title 大幅なアップデートを行いました
+        - @articles.each do |article|
+          li = link_to article do
+            p.date = article.created_at.strftime("%Y/%m/%d")
+            p class="label #{article.news_type}" = t(article.news_type)
+            p.title = article.title
   // おすすめ作品
   .top-ranking-wrapper
     .top-ranking-title
