feat: 戻るボタン

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -7,3 +7,5 @@
       h2 = @article.title
     .atricle-desc-wrapper
       p = simple_format @article.content
+    .article-back-button
+      = link_to '戻る', :back
