feat: cssを若干追加お

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -9,3 +9,16 @@
       p = simple_format @article.content
     .article-back-button
       = link_to '戻る', :back
+
+css:
+  .article-show-top {
+    background-color: rgb(244, 244, 244);
+    padding-top: 5%;
+    padding-bottom: 25%;
+    padding-left: 8%;
+    padding-right: 8%;
+  }
+
+  .article-main-contents {
+    background-color: #fff;
+  }
