--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -550,3 +550,13 @@ a:hover {
 }
 
 // article show (あとで移動する)
+
+.article-show-title {
+  padding: 3% 0;
+  text-align: center;
+}
+
+.article-show-title h2 {
+  font-size: 1.25rem;
+  font-weight: normal;
+}
