feat: padding-desc article

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -575,3 +575,10 @@ a:hover {
   border-bottom: solid 4px #5D99FF;
   display: inline-block;
 }
+
+.article-desc-wrapper {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 1%;
+  padding-bottom: 8%;
+}
