--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -5,7 +5,7 @@
     // Newsタイトル
     .article-show-title
       h2 class="#{@article.news_type}-border" = @article.title
-    .atricle-desc-wrapper
+    .article-desc-wrapper
       p = simple_format @article.content
     .article-back-button
       = link_to '戻る', :back
