feat: 戻るボタンの配置

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -586,3 +586,9 @@ a:hover {
 .article-desc-wrapper p {
   line-height: 180%;
 }
+
+.article-back-button {
+  font-size: 1.02rem;
+  margin-left: 80%;
+  margin-bottom: 2%;
+}
