--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -28,7 +28,8 @@ css:
   }
 
   .article-show-title {
-    padding: 3% 0;
+    padding-top: 3%;
+    margin-bottom: 1.5%;
     text-align: center;
   }
 
@@ -51,6 +52,11 @@ css:
   .article-show-title .other-border {
     border-bottom: solid 4px #5D99FF;
     display: inline-block;
+  }
+
+  .article-show-date {
+    margin-left: 70%;
+    color: rgb(229, 152, 152);
   }
 
   .article-desc-wrapper {
