feat: responsive design 枠の大きさだよ、、ずっと一緒に、、///

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -86,3 +86,12 @@ css:
     color: #0a9dd1;
     transition: 0.3s
   }
+
+  @media screen and (max-width: 480px) {
+    .article-show-top {
+      padding-top: 12%;
+      padding-bottom: 18%;
+      padding-left: 11%;
+      padding-right: 11%;
+    }
+  }
