--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -91,7 +91,18 @@ css:
     .article-show-top {
       padding-top: 12%;
       padding-bottom: 18%;
-      padding-left: 11%;
-      padding-right: 11%;
+      padding-left: 7%;
+      padding-right: 7%;
+    }
+
+    .article-show-title {
+      padding-top: 7%;
+      margin-bottom: 4%;
+      margin-left: 2%;
+      margin-right: 2%;
+    }
+
+    .article-show-title h2 {
+      font-size: 1.12rem;
     }
   }
