--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -105,4 +105,16 @@ css:
     .article-show-title h2 {
       font-size: 1.12rem;
     }
+
+    .article-show-title .notice-border {
+      border-bottom: solid 2px #FF773E;
+    }
+
+    .article-show-title .update-border {
+      border-bottom: solid 2px #A16EFF;
+    }
+
+    .article-show-title .other-border {
+      border-bottom: solid 2px #5D99FF;
+    }
   }
