--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -117,4 +117,9 @@ css:
     .article-show-title .other-border {
       border-bottom: solid 2px #5D99FF;
     }
+
+    .article-show-date {
+      margin-left: 54%;
+      margin-bottom: 3%;
+    }
   }
