feat: descの文字サイズが主な変更かな〜（メタ情報を喋ってくれる女の子キャラ）

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -122,4 +122,16 @@ css:
       margin-left: 54%;
       margin-bottom: 3%;
     }
+
+    .article-desc-wrapper {
+      padding-left: 6%;
+      padding-right: 6%;
+      padding-top: 8%;
+      padding-bottom: 12%;
+    }
+
+    .article-desc-wrapper p {
+      line-height: 170%;
+      font-size: 0.88rem;
+    }
   }
