feat: レスポンシブ対応完了

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -134,4 +134,10 @@ css:
       line-height: 170%;
       font-size: 0.88rem;
     }
+
+    .article-back-button {
+      font-size: 0.97rem;
+      margin-left: 76%;
+      margin-bottom: 7%;
+    }
   }
