feat: 重要な微調整

--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -123,6 +123,11 @@ css:
       margin-bottom: 3%;
     }
 
+    .article-show-date p {
+      font-size: 0.92rem;
+      opacity: 0.9;
+    }
+
     .article-desc-wrapper {
       padding-left: 6%;
       padding-right: 6%;
